--- a/src/components/landing_page/landing_page.scss
+++ b/src/components/landing_page/landing_page.scss
@@ -1,6 +1,6 @@
 .main-background{
-    min-height: 800px;
-    background-image: url(../images/bg.svg);
+    min-height: 1000px;
+    background-image: url(../images/bg_in.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 30px 0;
