--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,60 +1,62 @@
 include ../mixins.pug
-footer.footer.container
-  .footer__nav
-    .footer__nav__block
-      .logo(class="footer__block logo")
-      div
-        p(style='white-space:pre;')
-          | Бронирование номеров в лучшем 
-          | отеле 2019 года по версии
-          | ассоциации «Отельные взгляды»
-    .footer__nav__block
-      h3(class="footer__block footer__title") Навигация
-      ul
-        li 
-          a О нас
-        li
-          a Новости
-        li 
-          a Служба поддержки
-        li
-          a Услуги
-    .footer__nav__block
-      h3(class="footer__block footer__title") О нас
-      ul
-        li 
-          a О сервисе
-        li 
-          a Наша команда
-        li 
-          a Вакансии
-        li 
-          a Инвесторы
-    .footer__nav__block
-      h3(class="footer__block footer__title") Служба поддержки
-      ul
-        li 
-          a Соглашения
-        li
-          a  Сообщества
-        li
-          a Связь с нами
-    .footer__nav__block
-      h3(class="footer__block footer__title") Подписка
-      p(style='white-space:pre;')
-        | Получайте специальные
-        | предложения и новости сервиса
-      +input-subscription("Email")
+footer
+  .footer.container
+    .footer__nav
+      .footer__nav__block
+        .logo(class="footer__block logo")
+        div
+          p(style='white-space:pre;')
+            | Бронирование номеров в лучшем 
+            | отеле 2019 года по версии
+            | ассоциации «Отельные взгляды»
+      .footer__nav__block
+        h3(class="footer__block footer__title") Навигация
+        ul
+          li 
+            a О нас
+          li
+            a Новости
+          li 
+            a Служба поддержки
+          li
+            a Услуги
+      .footer__nav__block
+        h3(class="footer__block footer__title") О нас
+        ul
+          li 
+            a О сервисе
+          li 
+            a Наша команда
+          li 
+            a Вакансии
+          li 
+            a Инвесторы
+      .footer__nav__block
+        h3(class="footer__block footer__title") Служба поддержки
+        ul
+          li 
+            a Соглашения
+          li
+            a  Сообщества
+          li
+            a Связь с нами
+      .footer__nav__block
+        h3(class="footer__block footer__title") Подписка
+        p(style='white-space:pre;' class="footer__title--describtion")
+          | Получайте специальные
+          | предложения и новости сервиса
+        +input-subscription("Email")
+  hr
   .footer__details.container
-      .footer__details__copyright Copyright &copy; 2018 Toxin отель. Все права зачищены.
-      ul.about-list.row
-        li
-          a(href="#")
-            i(class="fab fa-twitter icon-a")
-        li
-          a(href="#")
-            i(class="fab fa-facebook-f" id="red")
-        li
-          a(href="#")
-            i(class="fab fa-instagram" )
-         
+        p(class="footer__details__copyright") Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
+        ul.about-list.row
+          li
+            a(href="#")
+              i(class="fab fa-twitter icon-a")
+          li
+            a(href="#")
+              i(class="fab fa-facebook-f" id="red")
+          li
+            a(href="#")
+              i(class="fab fa-instagram" )
+          
