code for room-card

--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -1,28 +1,30 @@
 .card {
-    width: 270px;
+    width: 19vw;
     background: #ffffff;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-    border-radius: 4px;
+    border-radius: 7px;
+    margin: 10px 0;
     & img{
-       width: 270px;
-       height: 150px;
+       width: 100%;
+       height: 200px;
        background-color: red; 
+       border-top-left-radius: 7px;
+       border-top-right-radius: 7px;
     }
     &_container{
-        padding: 20px;
+        padding: 10px 20px;
     }
     &-number{
-      font-family: Quicksand;
       font-style: normal;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 28px;
       line-height: 17px;
       color: #1F2041;}
     &-price{
       font-family: Montserrat;
       font-style: normal;
       font-weight: bold;
-      font-size: 14px;
+      font-size: 28px;
       line-height: 18px;
       color: rgba(31, 32, 65, 0.5);
     }
@@ -49,9 +51,28 @@
     --star-size: 24px;
     --star-outline: #4CAF50 solid 1px;
     --star-color: #fff;
-    --star-background:  #BC9CFF;
+    --star-background: #BC9CFF;
   }
   
-
+  .Stars {
+    --percent: calc(var(--rating) / 5 * 100%);
+    display: inline-block;
+    font-size: var(--star-size);
+    font-family: Times;
+    line-height: 1;
+  }
   
+  .Stars::before {
+    content: '★★★★★';
+    font-size: 24px;
+    letter-spacing: 3px;
+    background: -webkit-gradient(linear, left top, right top, from(var(--star-background)), to(var(--star-color)));
+    background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke: 1px #8BA4F9;
+  }
   
+  .stars__decor{
+    margin-top: 20px;
+  }
