--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,11 +12,13 @@
 @import "../components/slider/slider.scss";
 @import "../components/signin-form/signin-form.scss";
 @import "../components/components-page/components-page.scss";
+@import "../components/datepicker/datepicker.scss";
 
 html,
 body {
   margin: 0;
   height: 100%;
+  font-family: "OpenSans", sans-serif;
 }
 
 .container {
