--- a/src/components/datepicker/datepicker.scss
+++ b/src/components/datepicker/datepicker.scss
@@ -116,6 +116,9 @@
         &:hover {
           background: #66d2ea ;
         }
+        &:active {
+          background: #66d2ea ;
+        }
       }
     }
   }
@@ -128,6 +131,11 @@
     justify-content: space-between;
   }
   
+  .ui-datepicker-calendar .ui-state-active {
+    color: #e91e62;
+    border: 1px solid #e91e62;
+}
+
   .ui-datepicker-prev,
   .ui-datepicker-next {
     width: 20px;
@@ -169,3 +177,162 @@
   //   overflow-x: scroll;
   // }
   // .ui-widget { font-size: 100% }
+
+//   .ui-datepicker .ui-datepicker-title select {
+//     font-size: 1em;
+//     margin: 1px 0;
+//     background: red;
+//   }
+
+// .ui-datepicker,
+// .ui-datepicker table,
+// .ui-datepicker tr,
+// .ui-datepicker td,
+// .ui-datepicker th {
+//   margin: 0;
+//   padding: 0;
+//   border: none;
+//   border-spacing: 0;
+// }
+
+// .ui-datepicker {
+//   display: none;
+//   width: 100%;
+//   padding: 35px;
+//   cursor: default;
+//   text-transform: uppercase;
+//   font-family: Tahoma;
+//   font-size: 74px;
+//   background: #fff;
+//   -webkit-border-radius: 4px;
+//   -moz-border-radius: 4px;
+//   border-radius: 4px;
+//   border: solid 1px #e91e62;
+// }
+
+// .ui-datepicker-header {
+//   position: relative;
+//   padding-bottom: 10px;
+//   border-bottom: 1px solid #d6d6d6;
+// }
+
+// .ui-datepicker-title {
+//   text-align: center;
+// }
+
+// .ui-datepicker-month {
+//   position: relative;
+//   padding-right: 15px;
+//   color: #e91e62;
+// }
+
+// .ui-datepicker-year {
+//   padding-left: 8px;
+//   color: #e91e62;
+// }
+
+// .ui-datepicker-month:before {
+//   display: block;
+//   position: absolute;
+//   top: 5px;
+//   right: 0;
+//   width: 5px;
+//   height: 5px;
+//   content: '';
+//   background: #a5cd4e;
+//   background: -moz-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+//   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #a5cd4e), color-stop(100%, #6b8f1a));
+//   background: -webkit-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+//   background: -o-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+//   background: -ms-linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+//   background: linear-gradient(top, #a5cd4e 0%, #6b8f1a 100%);
+//   -webkit-border-radius: 5px;
+//   -moz-border-radius: 5px;
+//   border-radius: 5px;
+// }
+
+// .ui-datepicker-prev,
+// .ui-datepicker-next {
+//   position: absolute;
+//   top: -2px;
+//   padding: 5px;
+//   cursor: pointer;
+// }
+
+// .ui-datepicker-prev {
+//   left: 0;
+//   padding-left: 0;
+// }
+
+// .ui-datepicker-next {
+//   right: 0;
+//   padding-right: 0;
+// }
+
+// .ui-datepicker-prev span,
+// .ui-datepicker-next span {
+//   display: block;
+//   width: 5px;
+//   height: 10px;
+//   text-indent: -9999px;
+//   // background-image: url(../img/arrows.png);
+// }
+
+// .ui-datepicker-prev span {
+//   background-position: 0px 0px;
+// }
+
+// .ui-datepicker-next span {
+//   background-position: -5px 0px;
+// }
+
+// .ui-datepicker-prev-hover span {
+//   background-position: 0px -10px;
+// }
+
+// .ui-datepicker-next-hover span {
+//   background-position: -5px -10px;
+// }
+
+// .ui-datepicker-calendar th {
+//   padding-top: 15px;
+//   padding-bottom: 10px;
+//   text-align: center;
+//   font-weight: normal;
+//   color: #a8a8a8;
+// }
+
+// .ui-datepicker-calendar td {
+//   padding: 0 7px;
+//   text-align: center;
+//   line-height: 26px;
+// }
+
+// .ui-datepicker-calendar .ui-state-default {
+//   display: block;
+//   width: 26px;
+//   outline: none;
+//   text-decoration: none;
+//   color: #000;
+//   border: 1px solid transparent;
+// }
+
+
+
+// .ui-datepicker-other-month .ui-state-default {
+//   color: #ccc;
+// }
+
+// .ui-datepicker table {
+//   margin: 0 auto;
+// }
+
+// .ui-datepicker-calendar .ui-state-active {
+//   color: #e91e62!important;
+//   border: 1px solid #e91e62!important;
+// }
+
+.ui-datepicker-calendar .ui-state-active {
+  border: 1px solid #e91e62!important;
+  background-color: red!important;
+}
