--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -59,9 +59,12 @@ include ../mixins.pug
                 i(class="fab fa-instagram")
         .wrapper_content
             .content
-                +card-room(800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(800, 800, "--rating: 3.5",800, "room-card__decor") 
-                +card-room(800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(800, 800, "--rating: 3.5",800, "room-card__decor")
-                +card-room(800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room1.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room2.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room3.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room4.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room5.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room6.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room7.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room8.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
+                +card-room(require("./images/room9.jpg"), 800, 800, "--rating: 3.5",800, "room-card__decor")
