--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -127,7 +127,7 @@
   border: 1.5px solid #bc9cff;
 }
 
-.checkbox__name__descr{
+.checkbox__name__descr {
   font-weight: bold;
   padding-left: 10px;
   font-family: "OpenSans";
@@ -170,20 +170,21 @@
 }
 
 .room__information {
-  width: 370px;
+  width: 390px;
   &__wrapper {
     display: flex;
     flex-direction: row;
-    padding: 30px 0 30px 0;
-    border-bottom: 1px solid grey;
+    padding: 14px 10px 25px 13px;
     &__description {
       & h4 {
         margin-block-start: 0em;
         margin-block-end: 0.1em;
+        margin-left: 15px;
         font-family: "OpenSans";
         font-style: normal;
-        font-weight: 900;
         font-size: 18px;
+        letter-spacing: 1.7px;
+        font-weight: bold;
         line-height: 24px;
         color: rgba(31, 32, 65, 0.75);
       }
@@ -195,42 +196,72 @@
         font-style: normal;
         font-size: 18px;
         color: rgba(31, 32, 65, 0.75);
+        margin-left: 15px;
+        font-family: "OpenSans";
+        font-style: normal;
+        font-size: 18px;
+        letter-spacing: 1.2px;
+        font-weight: 300;
       }
     }
   }
   &__icon {
-    font-size: 52px;
+    font-size: 32px;
     color: #bc9cff;
   }
+}
+
+.border {
+  border-bottom: 1px solid grey;
 }
 
 .room__feedback__wrapper {
   &__person {
     display: flex;
     flex-direction: row;
-    & h4,
-    p {
-      margin-block-start: 0;
-      margin-block-end: 0;
+    margin-left: -15px;
+    & img {
+      width: 120px;
+      height: 120px;
+    }
+    & h4 {
+      margin-block-start: 1em;
+      margin-block-end: 0.35em;
+      font-size: 18px;
+      letter-spacing: 1.7px;
+      font-weight: bold;
+      margin-left: -15px;
+    }
+    & p {
+      margin-block-start: 0em;
+      margin-block-end: 0em;
+      font-size: 19px;
+      letter-spacing: 0.8px;
+      font-weight: 300;
+      margin-left: -15px;
     }
   }
   &__evaluation {
     display: flex;
-    margin-top: 10px;
+    margin-top: -25px;
     & p {
-      margin-left: 15px;
-      margin-block-start: 0;
-      margin-block-end: 0;
+      margin-left: 25px;
+      margin-top: -2px;
+      font-size: 18px;
+      letter-spacing: 1.3px;
+      font-weight: 500;
+      line-height: 30px;
     }
     & button {
-      width: 40px;
-      height: 20px;
+      width: 88px;
+      height: 27px;
       background: #ffffff;
       border: 1px solid rgba(31, 32, 65, 0.25);
       box-sizing: border-box;
-      border-radius: 10px;
+      border-radius: 25px;
       outline: none;
       color: rgba(31, 32, 65, 0.25);
+      margin-left: 17px;
       & span {
         margin-left: 5px;
       }
@@ -240,20 +271,17 @@
         border-color: #bc9cff;
         span {
           opacity: 1;
-          transition: all 0.2s ease-in-out;
           font-style: normal;
           font-weight: normal;
           font-size: 10px;
           line-height: 12px;
           /* identical to box height */
-          text-align: center;
-          color: #bc9cff;
+          padding-top: 5px;
         }
       }
     }
   }
 }
-
 
 #slider-range {
   position: relative;
@@ -287,5 +315,3 @@
 #slider-range .ui-widget-header {
   background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
 }
-
-
