--- a/src/components/mixins.pug
+++ b/src/components/mixins.pug
@@ -26,9 +26,9 @@ mixin radio-button(name)
           .check
 
 
-mixin card-room(number, price, style="--rating: level", feedback, className)
+mixin card-room(imgName, number, price, style="--rating: level", feedback, className)
     div(class= className, class="card")
-        img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUmtXRoJ9zEe08pUDUCfAbCm3iPQmuzlWYaecBWe8-Ay_VDdq9ig" alt="")
+        img(src= imgName)
         //- div(id="carousel" class="owl-carousel")
         //-   div(class="item")
         //-     img(class="owl-lazy" data-src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUmtXRoJ9zEe08pUDUCfAbCm3iPQmuzlWYaecBWe8-Ay_VDdq9ig" alt="")
@@ -65,26 +65,26 @@ mixin input-subscription(placeholder)
         i(class="fa fa-arrow-right")
 
 
-mixin room-information(icon, quality, descr)
+mixin room-information(icon, quality, descr, className)
     div(class="room__information")
-      div(class="room__information__wrapper")
-         i(class="room__information__icon" class= icon)
+      div(class="room__information__wrapper" class= className)
+         i(class="material-icons")= icon
          div(class="room__information__wrapper__description")
             h4= quality
             p= descr
 
-mixin feedback( personName, date)
+mixin feedback(imgName, personName, date, text)
   div(class="room__feedback")
     div(class="room__feedback__wrapper")
       div(class="room__feedback__wrapper__person")
-        img(src="../images/twitter.svg")
+        img(src= imgName)
         div(class="room__feedback__wrapper__person--name")
           h4= personName
           p= date
       div(class="room__feedback__wrapper__evaluation")
         button(type: "button")
-          i.fa.fa-heart(class="icon")
-          span 0
+          i(class="material-icons material-icons__like") favorite_border
+          span 12
         p= text
 
 mixin bullet-list(li1, li2, li3)
@@ -92,3 +92,11 @@ mixin bullet-list(li1, li2, li3)
     li= li1 
     li= li2
     li= li3
+
+
+mixin carouselPanel(name, imageUrl)
+  .panel
+    .image
+      img(src= imageUrl)
+    h2= name
+  
