--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,7 @@ html(lang="en")
             //- include components/header/header.pug
             //- include components/footer/footer.pug
             //- include components/landing_page/landing_page.pug
-            //- include components/signin-page/signin-page.pug
+            //-   include components/signin-page/signin-page.pug
             //- include components/search-page/search-page.pug
             //- include components/card-room/card-room.pug
             //- include components/room-page/room-page.pug
@@ -20,6 +20,7 @@ html(lang="en")
             //- include components/slider/slider.pug
             //- include components/components-page/components-page.pug
             include components/info-room/info-room.pug
-            
+            //- include blocks/chart/chart.pug
+            //- include blocks/calculator/calculator.pug
 
 
