--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -36,10 +36,10 @@
   
   
   
-  .row{
-      display: flex;
-      justify-content: space-between;
-  }
+  // .row{
+  //     display: flex;
+  //     justify-content: space-between;
+  // }
   
   .line{
       border-bottom: 1px solid rgba(31, 32, 65, 0.1);
