--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "../components/components-page/components-page.scss";
 @import "../components/datepicker/datepicker.scss";
 @import "../blocks/calculator/calculator.scss";
+@import "../blocks/airdatepicker/airdatepicker.scss";
 
 html,
 body {
