--- a/src/index.pug
+++ b/src/index.pug
@@ -19,8 +19,9 @@ html(lang="en")
             //- include components/datepicker/datepicker.pug
             //- include components/slider/slider.pug
             //- include components/components-page/components-page.pug
-            include components/info-room/info-room.pug
+            //- include components/info-room/info-room.pug
             //- include blocks/chart/chart.pug
             //- include blocks/calculator/calculator.pug
+            include blocks/airdatepicker/airdatepicker.pug
 
 
