change datepicker and search form

--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -1,5 +1,22 @@
 input(type="text"
     data-range="true"
-    data-multiple-dates-separator=" - "
+    data-multiple-dates-separator=" - " 
+    class="dateRange"
     data-language="en"
-    class="datepicker-here")
+    class="datepicker-here"
+    id="startDate")
+
+input(type="text"
+    data-range="true"
+    data-multiple-dates-separator=" - " 
+    class="dateRange"
+    data-language="en"
+    class="datepicker-here"
+    id="endDate")
+
+//- input(type='text' class="datepickerWrap" id='start' data-range="true"
+//-     data-multiple-dates-separator=" - "
+//-     class="datepicker-here")
+//- input(type='text' class="datepickerWrap"  id='end'  data-range="true"
+//-     data-multiple-dates-separator=" - "
+//-     class="datepicker-here")
