--- a/src/components/datepicker/datepicker.pug
+++ b/src/components/datepicker/datepicker.pug
@@ -6,7 +6,7 @@
 
 //- input(id="calendar")
 
-label(for="from")
-input(type="text" id="from" name="from")
-label(for="to")
-input(type="text" id="to" name="to")
+//- label(for="from")
+//- input(type="text" id="from" name="from")
+//- label(for="to")
+//- input(type="text" id="to" name="to")
