--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -77,14 +77,17 @@
   }
 }
 
-.fa-twitter{
-  cursor: pointer;
-  background: pink;
-	background: -webkit-radial-gradient(33% 100% circle, #515ECF 4%, #9B36B7 30%, #D92E7F 62%, #F15245 85%, #FED373);
-	background: radial-gradient(circle at 33% 100%, #ff3be7 4%, #ff3be7 28%, #03ffe8 62%, #F15245 85%, #FED373);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+.div {
+  display:flex;
+  justify-content:center;
+  font-size:50px;
+  color: red;
 }
+
+.div svg * {
+  fill: url(#rg);
+}
+
 /** Viewport <= 800px **/
 
 @media (max-width: 800px) {
