--- a/src/components/search-page/search-page.pug
+++ b/src/components/search-page/search-page.pug
@@ -6,6 +6,8 @@ html
     include ../header/header.pug
     .clear
     .main-background-search
-      p(class="slogan") Лучшие номера для вашей работы, отдыха и просто вдохновения
       include ../form-search/form-search.pug
+      p(class="slogan" style='white-space:pre;') 
+        |Лучшие номера для вашей работы, 
+        |  отдыха и просто вдохновения
     include ../footer/footer.pug
