--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 @import "../components/datepicker/datepicker.scss";
 @import "../blocks/calculator/calculator.scss";
 @import "../blocks/airdatepicker/airdatepicker.scss";
+@import "../blocks/dropdown/dropdown.scss";
 
 html,
 body {
