--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -52,11 +52,35 @@ footer
         ul.about-list.row
           li
             a(href="#")
-              i(class="fab fa-twitter icon-a")
+              svg(width="0" height="0")
+                radialGradient(id="rg" r="150%" cx="30%" cy="107%")
+                  stop(stop-color="#BC9CFF" offset="0")
+                  stop(stop-color="#BC9CFF" offset="0.05")
+                  stop(stop-color="#8BA4F9" offset="0.45")
+                  stop(stop-color="#8BA4F9" offset="0.6")
+                  stop(stop-color="#8BA4F9" offset="0.9")
+              div.div
+                i(class="fab fa-twitter" aria-hidden="true")
           li
             a(href="#")
-              i(class="fab fa-facebook-f" id="red")
+              svg(width="0" height="0")
+                radialGradient(id="rg" r="150%" cx="30%" cy="107%")
+                  stop(stop-color="#BC9CFF" offset="0")
+                  stop(stop-color="#BC9CFF" offset="0.05")
+                  stop(stop-color="#8BA4F9" offset="0.45")
+                  stop(stop-color="#8BA4F9" offset="0.6")
+                  stop(stop-color="#8BA4F9" offset="0.9")
+              div.div
+                i(class="fab fa-facebook-f" aria-hidden="true")
           li
             a(href="#")
-              i(class="fab fa-instagram" )
+              svg(width="0" height="0")
+                radialGradient(id="rg" r="150%" cx="30%" cy="107%")
+                  stop(stop-color="#8BA4F9" offset="0")
+                  stop(stop-color="#BC9CFF" offset="0.05")
+                  stop(stop-color="#BC9CFF" offset="0.45")
+                  stop(stop-color="#BC9CFF" offset="0.6")
+                  stop(stop-color="#BC9CFF" offset="0.9")
+              div.div
+                i(class="fab fa-instagram" aria-hidden="true")
           
