--- a/src/components/form-search/form-search.pug
+++ b/src/components/form-search/form-search.pug
@@ -1,44 +1,22 @@
 include ../mixins.pug
 
 
-.wrap.form-search
-  .container-form
-    h1(
-      class="title main-title"
-        ) Найдём номера под ваши пожелания
+.form-search
+  div.wrapper-search
+    div.container-form
+      h1(class="title__main" style='white-space:pre;') 
+        |Найдём номера под 
+        |ваши пожелания
 
-    .row.flexs
-      .block
-        label(for="start-date" class="label") прибытие
-        input(type="text" name="start-date" id="start-date" placeholder="ДД.ММ.ГГГГ" class="input-date start-date")
-      .block
-        label(for="end-date" class="label") выезд
-        input( type="text" name="end-date" id="end-date" placeholder="ДД.ММ.ГГГГ" class="input-date")
-      
+      p(class="form-search__label") Гости
+      include ../../blocks/dropdown/dropdown.pug
+      //- .row.flexs
+      //-   .block
+      //-     label(for="start-date" class="label") прибытие
+      //-     input(type="text" name="start-date" id="start-date" placeholder="ДД.ММ.ГГГГ" class="input-date start-date")
+      //-   .block
+      //-     label(for="end-date" class="label") выезд
+      //-     input( type="text" name="end-date" id="end-date" placeholder="ДД.ММ.ГГГГ" class="input-date")
+        
 
-    .dropdown
-      label.label Гости
-        .dropdowns
-          .dd-button  Сколько гостей
-          input(type="checkbox" class="dd-input" id="test")
-          ul(class="dd-menu")
-            li
-              p(class="titles") взрослые
-              .flexs
-                button(class="plus button") +
-                p(class="texts") 0
-                button(class="minus button") -
-            li
-              p(class="titles") дети
-              .flexs
-                button(class="plus button") +
-                p(class="texts") 0
-                button(class="minus button") -
-            li
-              p(class="titles") младенцы
-              .flexs
-                button(class="plus button") +
-                p(class="texts") 0
-                button(class="minus button") -
-
-    button(type="button" class="btn btn-width-violet") Перейти к оплате
+      button(type="button" class="btn btn-width-violet") подобрать номер
