--- a/src/components/search-page/search-page.scss
+++ b/src/components/search-page/search-page.scss
@@ -3,7 +3,7 @@
     background-image: url(../images/image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 30px 0;
+    padding-top: 95px;
 }
 
 .clear{
