--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -1,18 +1,14 @@
-input(type="text"
-    data-range="true"
-    data-multiple-dates-separator=" - " 
-    class="dateRange"
-    data-language="en"
-    class="datepicker-here"
-    id="startDate")
+div.flex-wrap
+    input(type="text"
+        data-range="true"
+        data-multiple-dates-separator=" - " 
+        class="dateRange range"
+        class="datepicker-here"
+        id="startDate")
 
-input(type="text"
-    data-range="true"
-    data-multiple-dates-separator=" - " 
-    class="dateRange"
-    data-language="en"
-    class="datepicker-here"
-    id="endDate")
+    input(type="text"
+        class="range"
+        id="endDate")
 
 //- input(type='text' class="datepickerWrap" id='start' data-range="true"
 //-     data-multiple-dates-separator=" - "
