--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -1,3 +1,16 @@
+.flex-wrap{
+    display: flex;
+    justify-content: space-between;
+}
+
+.range{
+    width: 200px;
+    height: 40px;
+}
+
+
+
+
 .datepicker--cell-day.-other-month-, .datepicker--cell-year.-other-decade- {
     color: #dedede; }
     .datepicker--cell-day.-other-month-:hover, .datepicker--cell-year.-other-decade-:hover {
@@ -179,7 +192,7 @@
     font-family: Tahoma, sans-serif;
     font-size: 14px;
     color: #4a4a4a;
-    width: 250px;
+    width: 450px;
     position: absolute;
     left: -100000px;
     opacity: 0;
