--- a/src/components/room-page/room-page.pug
+++ b/src/components/room-page/room-page.pug
@@ -30,6 +30,7 @@ include ../mixins.pug
             //-     input(type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;")
             //- div(id="slider-range")
     .right-side
+        h1(class="title__main") Найдём номера под ваши пожелания
         span(class="slide" id="slide")
             a(href="#")
                 i(class="fab fa-instagram")
