--- a/src/index.pug
+++ b/src/index.pug
@@ -22,6 +22,7 @@ html(lang="en")
             //- include components/info-room/info-room.pug
             //- include blocks/chart/chart.pug
             //- include blocks/calculator/calculator.pug
-            include blocks/airdatepicker/airdatepicker.pug
+            //- include blocks/airdatepicker/airdatepicker.pug
             //- include blocks/dropdown/dropdown.pug
+            include blocks/panagination/panagination.pug
 
