--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import "../blocks/calculator/calculator.scss";
 @import "../blocks/airdatepicker/airdatepicker.scss";
 @import "../blocks/dropdown/dropdown.scss";
+@import "../blocks/panagination/panagination.scss";
 
 html,
 body {
